tests/fixtures/syntax/invalid/before_each_empty.repor
# A `before_each` block must contain at least one `write` step
# (parse.before_each.empty).
before_each {
}

case "empty before_each" {
  $ true
  assert {
    exit 0
  }
}
